--- a/Kaggle_Competition/Gravitational_Waves/EDA_CQT_Keras_Baseline.ipynb
+++ b/Kaggle_Competition/Gravitational_Waves/EDA_CQT_Keras_Baseline.ipynb
@@ -1350,9 +1350,18 @@
     "        X, y = self.__data_generation(list_IDs_temp)\n",
     "        return X, y\n",
     "\n",
-    "    \"\"\" And finally the core method which will actually produce batches of data. This private method __data_generation \"\"\"\n",
     "\n",
     "    def __data_generation(self, list_IDs_temp):\n",
+    "        \"\"\"\n",
+    "        Generates the data and labels for a batch.\n",
+    "\n",
+    "        Args:\n",
+    "            list_IDs_temp (list): List of file IDs for the batch.\n",
+    "\n",
+    "        Returns:\n",
+    "            tuple: Tuple containing the input data and labels.\n",
+    "\n",
+    "        \"\"\"\n",
     "        # We have 5,60,000 files, each with dimension of 3 * 4096\n",
     "        X = np.zeros((self.batch_size, 3, 4096))\n",
     "        y = np.zeros((self.batch_size, 1))\n",
