--- a/Kaggle_Competition/Santander-Kg-Value-Prediction-Challenge/NoteBooks/Santender_v3.ipynb
+++ b/Kaggle_Competition/Santander-Kg-Value-Prediction-Challenge/NoteBooks/Santender_v3.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -520,6 +521,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -582,6 +584,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -634,6 +637,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -669,6 +673,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -705,6 +710,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -744,6 +750,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -821,6 +828,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -889,6 +897,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -1144,6 +1153,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -1245,6 +1255,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -1314,6 +1325,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -1349,6 +1361,17 @@
    "outputs": [],
    "source": [
     "def convert_df_to_sparse_array(df, exclude_columns=[]):\n",
+    "    \"\"\"\n",
+    "    Convert the DataFrame to a sparse array.\n",
+    "\n",
+    "    Args:\n",
+    "        df (pandas.DataFrame): Input DataFrame.\n",
+    "        exclude_columns (list): List of column names to exclude from conversion.\n",
+    "\n",
+    "    Returns:\n",
+    "        pandas.DataFrame: DataFrame with selected columns converted to sparse arrays.\n",
+    "\n",
+    "    \"\"\"\n",
     "    df = df.copy()\n",
     "    exclude_columns = set(exclude_columns)\n",
     "\n",
@@ -1370,6 +1393,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -1385,6 +1409,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -1414,6 +1439,16 @@
    "outputs": [],
    "source": [
     "def drop_sparse_from_train_test(train, test):\n",
+    "    \"\"\" Drop sparse columns from the train and test DataFrames.\n",
+    "\n",
+    "    Args:\n",
+    "        train (pandas.DataFrame): Train DataFrame.\n",
+    "        test (pandas.DataFrame): Test DataFrame.\n",
+    "\n",
+    "    Returns:\n",
+    "        pandas.DataFrame: Train DataFrame with sparse columns dropped.\n",
+    "        pandas.DataFrame: Test DataFrame with sparse columns dropped.\n",
+    " \"\"\" \n",
     "    column_list_to_drop_data_from = [x for x in train.columns if not x in ['ID','target']]\n",
     "    for f in column_list_to_drop_data_from:\n",
     "        if len(np.unique(train[f]))<2:\n",
@@ -1425,6 +1460,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -1462,6 +1498,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "jupyter": {
@@ -1572,6 +1609,22 @@
    "outputs": [],
    "source": [
     "def light_gbm_model_run(train_x, train_y, validation_x, validation_y, test_x):\n",
+    "    \"\"\"\n",
+    "    Run the LightGBM model for regression.\n",
+    "\n",
+    "    Args:\n",
+    "        train_x (numpy.ndarray): Training input features.\n",
+    "        train_y (numpy.ndarray): Training target values.\n",
+    "        validation_x (numpy.ndarray): Validation input features.\n",
+    "        validation_y (numpy.ndarray): Validation target values.\n",
+    "        test_x (numpy.ndarray): Test input features.\n",
+    "\n",
+    "    Returns:\n",
+    "        numpy.ndarray: Predicted target values for the test set.\n",
+    "        lightgbm.Booster: Trained LightGBM model.\n",
+    "        dict: Evaluation results of the LightGBM model.\n",
+    "\n",
+    "    \"\"\"\n",
     "    params = {\n",
     "        \"objective\" : \"regression\",\n",
     "        \"metric\" : \"rmse\",\n",
@@ -1657,6 +1710,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -1797,6 +1851,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -1994,6 +2049,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -2031,6 +2087,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -2054,6 +2111,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -2236,6 +2294,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -2303,6 +2362,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
