--- a/Kaggle_Competition/Santander-Kg-Value-Prediction-Challenge/NoteBooks/Santender_v3.ipynb
+++ b/Kaggle_Competition/Santander-Kg-Value-Prediction-Challenge/NoteBooks/Santender_v3.ipynb
@@ -2023,6 +2023,21 @@
    "outputs": [],
    "source": [
     "def xgb_model_run(train_x, train_y, validation_x, validation_y, test_x):\n",
+    "    \"\"\"\n",
+    "    Run the XGBoost model for regression.\n",
+    "\n",
+    "    Args:\n",
+    "        train_x (numpy.ndarray): Training input features.\n",
+    "        train_y (numpy.ndarray): Training target values.\n",
+    "        validation_x (numpy.ndarray): Validation input features.\n",
+    "        validation_y (numpy.ndarray): Validation target values.\n",
+    "        test_x (numpy.ndarray): Test input features.\n",
+    "\n",
+    "    Returns:\n",
+    "        numpy.ndarray: Predicted target values for the test set.\n",
+    "        xgboost.Booster: Trained XGBoost model.\n",
+    "\n",
+    "    \"\"\"\n",
     "    params = {\n",
     "        'objective': 'reg:squarederror', \n",
     "          'eval_metric': 'rmse',\n",
