--- a/ML_Algos_From_Scratch/Linear Regression From Scratch with Pure Python/Linear_Regression_From_Scratch.ipynb
+++ b/ML_Algos_From_Scratch/Linear Regression From Scratch with Pure Python/Linear_Regression_From_Scratch.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -15,6 +17,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,6 +27,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -35,6 +39,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -47,6 +52,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -90,6 +96,17 @@
     "\n",
     "\n",
     "def r2_score(y_true, y_pred):\n",
+    "    \"\"\"\n",
+    "    Calculate the coefficient of determination (R-squared) for regression.\n",
+    "\n",
+    "    Args:\n",
+    "        y_true (numpy.ndarray): True target values.\n",
+    "        y_pred (numpy.ndarray): Predicted target values.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: R-squared score.\n",
+    "\n",
+    "    \"\"\"\n",
     "    corr_matrix = np.corrcoef(y_true, y_pred)\n",
     "    corr = corr_matrix[0, 1]\n",
     "    return corr ** 2\n",
@@ -97,12 +114,28 @@
     "\n",
     "class LinearRegression:\n",
     "    def __init__(self, learning_rate = 0.0001, n_iter = 1000 ):\n",
+    "        \"\"\"\n",
+    "        Linear regression model.\n",
+    "\n",
+    "        Args:\n",
+    "            learning_rate (float): Learning rate for gradient descent. Default is 0.0001.\n",
+    "            n_iter (int): Number of iterations for gradient descent. Default is 1000.\n",
+    "\n",
+    "        \"\"\"\n",
     "        self.lr = learning_rate\n",
     "        self.n_iter = n_iter\n",
     "        self.weights = None\n",
     "        self.bias = None\n",
     "\n",
     "    def fit(self, X, y):\n",
+    "        \"\"\"\n",
+    "        Fit the linear regression model to the training data.\n",
+    "\n",
+    "        Args:\n",
+    "            X (numpy.ndarray): Training input features.\n",
+    "            y (numpy.ndarray): Training target values.\n",
+    "\n",
+    "        \"\"\"\n",
     "        n_samples, n_features = X.shape\n",
     "\n",
     "        # initialize the parameters\n",
@@ -124,6 +157,16 @@
     "            self.bias -= self.lr * db\n",
     "\n",
     "    def predict(self, X):\n",
+    "        \"\"\"\n",
+    "        Generate predictions for the input data.\n",
+    "\n",
+    "        Args:\n",
+    "            X (numpy.ndarray): Input features.\n",
+    "\n",
+    "        Returns:\n",
+    "            numpy.ndarray: Predicted target values.\n",
+    "\n",
+    "        \"\"\"\n",
     "        y_approx = np.dot(X, self.weights) + self.bias\n",
     "        return y_approx\n",
     "\n",
@@ -157,7 +200,6 @@
     "\n",
     "print('Accuracy is ', accu)\n",
     "\n",
-    "\n",
     "y_pred_line = regressor.predict(X)\n",
     "\n",
     "cmap = plt.get_cmap(\"viridis\")\n",
@@ -170,9 +212,7 @@
     "\n",
     "plt.plot(X, y_pred_line, color = 'red', linewidth = 2, label = \"Predictions\")\n",
     "\n",
-    "plt.show()\n",
-    "\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
