--- a/ML_Algos_From_Scratch/Linear Regression From Scratch with Pure Python/Linear_Regression_From_Scratch.ipynb
+++ b/ML_Algos_From_Scratch/Linear Regression From Scratch with Pure Python/Linear_Regression_From_Scratch.ipynb
@@ -129,7 +129,7 @@
     "\n",
     "    def fit(self, X, y):\n",
     "        \"\"\"\n",
-    "        Fit the linear regression model to the training data.\n",
+    "        Fits the linear regression model to the training data by performing gradient descent to update the weights and bias.\n",
     "\n",
     "        Args:\n",
     "            X (numpy.ndarray): Training input features.\n",
@@ -158,7 +158,7 @@
     "\n",
     "    def predict(self, X):\n",
     "        \"\"\"\n",
-    "        Generate predictions for the input data.\n",
+    "        Generates predictions for the input data by calculating the dot product of the input features and the learned weights, and adding the bias term.\n",
     "\n",
     "        Args:\n",
     "            X (numpy.ndarray): Input features.\n",
