--- a/ML_Algos_From_Scratch/Linear Regression From Scratch with Pure Python/Linear_Regression_From_Scratch.ipynb
+++ b/ML_Algos_From_Scratch/Linear Regression From Scratch with Pure Python/Linear_Regression_From_Scratch.ipynb
@@ -97,7 +97,7 @@
     "\n",
     "def r2_score(y_true, y_pred):\n",
     "    \"\"\"\n",
-    "    Calculate the coefficient of determination (R-squared) for regression.\n",
+    "    Calculates the coefficient of determination (R-squared) for regression, which measures the proportion of the variance in the dependent variable that is predictable from the independent variables.\n",
     "\n",
     "    Args:\n",
     "        y_true (numpy.ndarray): True target values.\n",
