--- a/NLP/Decoding_Strategies_for_text_generation/Decoding_Strategies_for_text_generation.ipynb
+++ b/NLP/Decoding_Strategies_for_text_generation/Decoding_Strategies_for_text_generation.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -10,6 +11,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -53,6 +55,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -68,6 +71,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -95,6 +99,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -253,6 +258,17 @@
     "choices_per_step = 5\n",
     "\n",
     "def get_next_token_greedy_search(input_txt, input_ids):\n",
+    "    \"\"\"\n",
+    "    Performs greedy search for the next tokens in a text sequence using a trained model.\n",
+    "\n",
+    "    Args:\n",
+    "        input_txt (str): The input text sequence.\n",
+    "        input_ids (torch.Tensor): The input tensor containing tokenized text sequence.\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: DataFrame containing the decoding iterations and predicted token choices.\n",
+    "\n",
+    "    \"\"\"\n",
     "    iterations = []\n",
     "    # We run the decoding for eight timesteps.    \n",
     "    with torch.no_grad():\n",
@@ -305,6 +321,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -387,6 +404,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -530,6 +548,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -542,6 +561,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -646,6 +666,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -684,6 +705,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
