--- a/NLP/Roberta-Large-NER-on-Kaggle-NLP Competition/Pytorch-Roberta_Large.ipynb
+++ b/NLP/Roberta-Large-NER-on-Kaggle-NLP Competition/Pytorch-Roberta_Large.ipynb
@@ -238,6 +238,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5fcaf40c",
    "metadata": {
@@ -1216,15 +1217,39 @@
    "outputs": [],
    "source": [
     "class DataLoaderClass(Dataset):\n",
+    "    \"\"\"\n",
+    "    Custom PyTorch dataset class for tokenized data.\n",
+    "\n",
+    "    Args:\n",
+    "        tokenized_ds (dict): Tokenized dataset.\n",
+    "\n",
+    "    \"\"\"\n",
     "    def __init__(self, tokenized_ds):\n",
     "        self.data = tokenized_ds\n",
     "\n",
     "    def __getitem__(self, index):\n",
+    "        \"\"\"\n",
+    "        Retrieves an item from the dataset at the specified index.\n",
+    "\n",
+    "        Args:\n",
+    "            index (int): Index of the item to retrieve.\n",
+    "\n",
+    "        Returns:\n",
+    "            dict: Dictionary containing the item data.\n",
+    "\n",
+    "        \"\"\"\n",
     "        # print('print data ', self.data)\n",
     "        item = {k: self.data[k][index] for k in self.data.keys()}\n",
     "        return item\n",
     "\n",
     "    def __len__(self):\n",
+    "        \"\"\"\n",
+    "        Returns the total number of items in the dataset.\n",
+    "\n",
+    "        Returns:\n",
+    "            int: Total number of items in the dataset.\n",
+    "\n",
+    "        \"\"\"\n",
     "        return len(self.data['input_ids'])\n",
     "    \n",
     "\n",
