--- a/NLP/Topic_Modeling_with_BERT_and_Automatic_cluster_labeling/Topic_Modeling.ipynb
+++ b/NLP/Topic_Modeling_with_BERT_and_Automatic_cluster_labeling/Topic_Modeling.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -531,6 +532,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -554,6 +556,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -582,6 +585,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -600,6 +604,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -618,6 +623,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -636,6 +642,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -672,6 +679,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -698,6 +706,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1031,6 +1040,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1087,6 +1097,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1094,6 +1105,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1101,6 +1113,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1328,6 +1341,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1508,6 +1522,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2579,6 +2594,16 @@
    ],
    "source": [
     "def compute_IDF(documents):\n",
+    "    \"\"\"\n",
+    "    Computes the IDF (Inverse Document Frequency) values for words in a collection of documents.\n",
+    "\n",
+    "    Args:\n",
+    "        documents (List[str]): List of documents.\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: Dictionary mapping words to their IDF values.\n",
+    "\n",
+    "    \"\"\"\n",
     "    word_count = Counter()\n",
     "    for doc in documents:\n",
     "        if 'drops(players' in doc:\n",
@@ -2596,6 +2621,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2612,13 +2638,25 @@
    "outputs": [],
    "source": [
     "def get_group(df, category_col, category ):\n",
+    "    \"\"\"\n",
+    "    The get_group function takes a DataFrame (df), a category column name (category_col), and a category value (category) as inputs. It filters the DataFrame based on the specified category and returns a subset of the DataFrame containing only the rows with that category.\n",
+    "\n",
+    "    Args:\n",
+    "        df (pd.DataFrame): DataFrame to filter.\n",
+    "        category_col (str): Name of the column containing the category.\n",
+    "        category: Category value to filter on.\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: Subset of the DataFrame with the specified category.\n",
+    "\n",
+    "    \"\"\"\n",
     "    single_category = df[df[category_col] == category ].reset_index(drop = True)\n",
     "    return single_category\n",
     "\n",
     "\n",
     "def most_common(lst, n_words ):\n",
     "    \"\"\"\n",
-    "    Get most common words in a list of words\n",
+    "    This function takes a list of words (lst) and the number of top common words to return (n_words). It uses the collections.Counter class to count the occurrences of each word in the list. If a word appears more than once (counter[k] > 1), it multiplies its count by the corresponding IDF value (word_IDF[k]). Finally, the function returns a list of tuples representing the n most common words and their counts, obtained using the counter.most_common(n_words) method.\n",
     "    \n",
     "    Arguments:\n",
     "        lst: list, each element is a word\n",
@@ -3303,6 +3341,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
