--- a/NLP/zero_shot_multilingual_sentiment_classification_with_USEm/zero_shot_multilingual_sentiment_classification_with_USEm.ipynb
+++ b/NLP/zero_shot_multilingual_sentiment_classification_with_USEm/zero_shot_multilingual_sentiment_classification_with_USEm.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -14,6 +15,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "7H8im7owr-f6"
@@ -143,6 +145,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "dQqyPA7F0obm"
@@ -165,6 +168,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "EDJvySNPd84i"
@@ -174,6 +178,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "5Qc2cG91kUvg"
@@ -473,6 +478,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "rhdERVNbBtfS"
@@ -482,6 +488,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "DnG5xS0Q5cvm"
@@ -491,6 +498,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -510,6 +518,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "sUicJkL3qjyS"
@@ -609,6 +618,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "aljFCB77NVai"
@@ -627,7 +637,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -825,283 +835,13 @@
         "id": "kn8BVpOVrg80",
         "outputId": "0e8ff6f8-876d-406d-cb1e-ff500a34a345"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "WARNING:pytorch_lightning.loggers.tensorboard:Missing logger folder: /content/lightning_logs\n",
-            "INFO:pytorch_lightning.accelerators.cuda:LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
-            "INFO:pytorch_lightning.callbacks.model_summary:\n",
-            "  | Name   | Type       | Params\n",
-            "--------------------------------------\n",
-            "0 | layers | Sequential | 492 K \n",
-            "--------------------------------------\n",
-            "492 K     Trainable params\n",
-            "0         Non-trainable params\n",
-            "492 K     Total params\n",
-            "1.971     Total estimated model params size (MB)\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "50f60052fcf2475e8ce78005bced58af",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Sanity Checking: 0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/pytorch_lightning/utilities/data.py:99: UserWarning: Trying to infer the `batch_size` from an ambiguous collection. The batch size we found is 32. To avoid any miscalculations, use `self.log(..., batch_size=batch_size)`.\n",
-            "  \"Trying to infer the `batch_size` from an ambiguous collection. The batch size we\"\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "8c752a4a22ea4e489f17af7d4db56f06",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Training: 0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "983c791608ae4565a6003b6b1152af53",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Validation: 0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "6c5be5207fde4df8bf4004c4a05bd3f9",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Validation: 0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "309484c6b2ee4affaf847a8eddb88d67",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Validation: 0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "cb99e67ee294426d866b39a5028afb5b",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Validation: 0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "24146e0773f54ee7b32e93be03c88ab1",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Validation: 0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "2e1df9c107904a7ea819bc1e1af15d4b",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Validation: 0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "f0bb4b3cd055485691d4533d8f31120e",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Validation: 0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "ff2ed7286bd349cebe6120c5ba739242",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Validation: 0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "a63424784c414250bfe1ac630a73f52b",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Validation: 0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "45df44a9de1f4273b0835ab061a4a86d",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Validation: 0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "ad2d5d73e4774b6583270dbcf2655816",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Validation: 0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "17bc1997c1b944ef83b5e12f3e19b09c",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Validation: 0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "38f1e6a82da14fd496a55299324d0980",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Validation: 0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "177fb05dc2a546d79cfc4ab83f7bad26",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Validation: 0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "b4025d3e3a2a443fadb143a272283a9e",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Validation: 0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:pytorch_lightning.utilities.rank_zero:`Trainer.fit` stopped: `max_epochs=15` reached.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "trainer.fit(model, data.train_dataloader(), data.val_dataloader())"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "j-ZsljJhrTu8"
@@ -1209,6 +949,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "sVyhb0GkB05p"
@@ -1229,6 +970,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -1236,6 +978,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "E4Df46uECcyQ"
@@ -1267,6 +1010,23 @@
       "outputs": [],
       "source": [
         "def predict(text: List[str]):\n",
+        "    \"\"\"\n",
+        "    This function predicts the sentiment of a list of sentences using a pre-trained model.\n",
+        "    \n",
+        "    The sentences are first converted into embeddings using a custom data loading and embedding function. \n",
+        "    These embeddings are then passed through the model to generate logits. The model's predictions are \n",
+        "    then converted into human-readable labels and scores.\n",
+        "\n",
+        "    Parameters\n",
+        "    ----------\n",
+        "    text : List[str]\n",
+        "        The list of sentences to classify.\n",
+        "\n",
+        "    Returns\n",
+        "    -------\n",
+        "    results : List[dict]\n",
+        "        The list of dictionaries with each dictionary containing the text, predicted label, and corresponding score.\n",
+        "    \"\"\"\n",
         "    embeddings = torch.Tensor(dataloading.embed_text(text))\n",
         "    logits = best_model(embeddings)\n",
         "    preds = torch.argmax(logits, dim=1).detach().cpu().numpy()\n",
@@ -1283,6 +1043,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "nbWJhY1CHmBy"
@@ -1329,6 +1090,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "z_nfu9DBHp2z"
