--- a/NLP/FinBERT_Long_Text.ipynb
+++ b/NLP/FinBERT_Long_Text.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -12,6 +13,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -272,6 +274,19 @@
    "outputs": [],
    "source": [
     "def chunk_text_to_window_size_and_predict_proba(input_ids, attention_mask, total_len):\n",
+    "    \"\"\"\n",
+    "    This function splits the given input text into chunks of a specified window length, \n",
+    "    applies transformer model to each chunk and computes probabilities of each class for each chunk. \n",
+    "    The computed probabilities are then appended to a list.\n",
+    "\n",
+    "    Args:\n",
+    "        input_ids (List[int]): List of token ids representing the input text.\n",
+    "        attention_mask (List[int]): List of attention masks corresponding to input_ids.\n",
+    "        total_len (int): Total length of the input_ids.\n",
+    "\n",
+    "    Returns:\n",
+    "        proba_list (List[torch.Tensor]): List of probability tensors for each chunk.\n",
+    "    \"\"\"\n",
     "    proba_list = []\n",
     "    \n",
     "    start = 0\n",
@@ -281,6 +296,7 @@
     "\n",
     "    while loop:\n",
     "        end = start  + window_length\n",
+    "        # If the end index exceeds total length, set the flag to False and adjust the end index\n",
     "        if end >= total_len:\n",
     "            loop = False\n",
     "            end = total_len\n",
