--- a/NLP/FinBERT_Long_Text_Part_2.ipynb
+++ b/NLP/FinBERT_Long_Text_Part_2.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -12,6 +13,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -236,6 +238,15 @@
    "outputs": [],
    "source": [
     "def get_input_ids_and_attention_mask_chunk():\n",
+    "    \"\"\"\n",
+    "    This function splits the input_ids and attention_mask into chunks of size 'chunksize'. \n",
+    "    It also adds special tokens (101 for [CLS] and 102 for [SEP]) at the start and end of each chunk.\n",
+    "    If the length of a chunk is less than 'chunksize', it pads the chunk with zeros at the end.\n",
+    "    \n",
+    "    Returns:\n",
+    "        input_id_chunks (List[torch.Tensor]): List of chunked input_ids.\n",
+    "        attention_mask_chunks (List[torch.Tensor]): List of chunked attention_masks.\n",
+    "    \"\"\"\n",
     "    chunksize = 512\n",
     "    input_id_chunks = list(tokens['input_ids'][0].split(chunksize - 2))\n",
     "    attention_mask_chunks = list(tokens['attention_mask'][0].split(chunksize - 2))\n",
