--- a/NLP/FinBERT_Long_Text.ipynb
+++ b/NLP/FinBERT_Long_Text.ipynb
@@ -367,14 +367,31 @@
    "outputs": [],
    "source": [
     "def get_mean_from_proba(proba_list):\n",
+    "    \"\"\"\n",
+    "    This function computes the mean probabilities of class predictions over all the chunks.\n",
+    "\n",
+    "    Args:\n",
+    "        proba_list (List[torch.Tensor]): List of probability tensors for each chunk.\n",
+    "\n",
+    "    Returns:\n",
+    "        mean (torch.Tensor): Mean of the probabilities across all chunks.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Ensures that gradients are not computed, saving memory\n",
     "    with torch.no_grad():\n",
+    "        # Stack the list of tensors into a single tensor\n",
     "        stacks = torch.stack(proba_list)\n",
-    "        stacks = stacks.resize(stacks.shape[0], stacks.shape[2] )\n",
+    "\n",
+    "        # Resize the tensor to match the dimensions needed for mean computation\n",
+    "        stacks = stacks.resize(stacks.shape[0], stacks.shape[2])\n",
+    "\n",
+    "        # Compute the mean along the zeroth dimension (i.e., the chunk dimension)\n",
     "        mean = stacks.mean(dim = 0)\n",
+    "        \n",
     "    return mean\n",
     "\n",
     "mean = get_mean_from_proba(proba_list)\n",
-    "# tensor([0.0767, 0.1188, 0.8045])"
+    "# tensor([0.0767, 0.1188, 0.8045])\n"
    ]
   },
   {
